--- a/sobre.html
+++ b/sobre.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adriano Martiliano</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Olá, mundo!!</h1>
-    <a href="teste.php">PHP</a>
-    <a href="sobre.html">Sobre</a>
+    <p>Sucesso</p>
 </body>
 </html>
