--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projeto 01</title>
+	<title>Portfólio</title>
+	<link rel="stylesheet" href="_css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="palavras-chave,do,meu,site">
 	<meta name="description" content="Descrição do meu website">
@@ -11,8 +12,8 @@
 
 	<header>
 		<div class="center">
-			<div class="logo"><a href="/">Logomarca</a></div><!--logo-->
-			<nav class="desktop">
+			<div class="logo left"><a href="/">Logomarca</a></div><!--logo-->
+			<nav class="desktop right">
 				<ul>
 					<li><a href="">Home</a></li>
 					<li><a href="depoimentos">Depoimentos</a></li>
@@ -28,6 +29,7 @@
 					<li><a href="contato">Contato</a></li>
 				</ul>
 			</nav>
+			<div class="clear"></div>
 		</div><!--center-->
 	</header>
 
@@ -65,7 +67,7 @@
 			</div><!--box-especialidade-->
 
 			<div class="box-especialidade">
-				<h3>Icone 2</h3>
+				<h3><i class="fa-brands fa-html5"></i></h3>
 				<h4>HTML 5</h4>
 				<p>Texto HTML5</p>
 			</div><!--box-especialidade-->
