--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<section class="banner-principal">
 		<div class="center">
 			<form>
-				<h2>Qual o seu melhor email?</h2>
+				<h2>Qual seu e-mail?</h2>
 				<input type="email" name="email">
 				<input type="submit" name="acao" value="Cadastrar">
 			</form>
