--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
 	<meta name="keywords" content="palavras-chave,do,meu,site">
 	<meta name="description" content="Descrição do meu website">
 	<meta charset="utf-8" />
+	<style>
+		*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		.center {
+			max-width: 1280px;
+			padding: 0 2%;
+			margin: 0 auto;
+		}
+		.w33{ width: 33%;}
+		.w50{ width: 50%;}
+		.left{ float: left;}
+		.right{ float: right;}
+		.clear{ clear: both;}
+
+		header{
+			background-color: #ffab07;
+		}
+		.mobile {
+			display: none;
+		}
+	</style>
 </head>
 <body>
 
