--- a/index.html
+++ b/index.html
@@ -82,21 +82,22 @@
 	</section>
 
 	<section class="especialidades">
-		<h2 class="title">Especialidades</h2>
+		
 		<div class="center">
-			<div class="box-especialidade">
+			<h2 class="title">Especialidades</h2>
+			<div class="w33 left box-especialidade">
 				<h3>Icone 1</h3>
 				<h4>CSS3</h4>
 				<p>Texto CSS</p>
 			</div><!--box-especialidade-->
 
-			<div class="box-especialidade">
+			<div class="w33 left box-especialidade">
 				<h3><i class="fa-brands fa-html5"></i></h3>
 				<h4>HTML 5</h4>
 				<p>Texto HTML5</p>
 			</div><!--box-especialidade-->
 
-			<div class="box-especialidade">
+			<div class="w33 left box-especialidade">
 				<h3>Icone 3</h3>
 				<h4>Javascript</h4>
 				<p>Texto JavaScript</p>
