--- a/index.html
+++ b/index.html
@@ -26,17 +26,26 @@
 
 		header{
 			background-color: #ffab07;
+			padding: 40px 0;
 		}
 		.mobile {
 			display: none;
 		}
+		nav.desktop ul { list-style-type: none;}
+		nav.desktop li{
+			padding: 0 30px;
+			display: inline-block;
+			text-transform: uppercase;
+			font-size: 15px;
+		}
+		nav.desktop a{color: #434d53; text-decoration: none;}
 	</style>
 </head>
 <body>
 
 	<header>
 		<div class="center">
-			<div class="logo left"><a href="/">Logomarca</a></div><!--logo-->
+			<div class="logo left"><a href="/">MINHA LOGO</a></div><!--logo-->
 			<nav class="desktop right">
 				<ul>
 					<li><a href="">Home</a></li>
