Melhorias no Menu (Header)
Melhorias no menu, inclusão de logo (temporária), ajuste do rodapé. ocultação dos itens em construção, inclusão de icones dinâmicos entre outros.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="palavras-chave,do,meu,site">
 	<meta name="description" content="Descrição do meu website">
 	<meta charset="utf-8" />
+	<script src="https://kit.fontawesome.com/35d9b76d78.js" crossorigin="anonymous"></script>
 	<style>
 		*{
 			margin: 0;
@@ -26,26 +27,41 @@
 
 		header{
 			background-color: #ffab07;
-			padding: 40px 0;
+			padding: 20px 0 10px 0;
 		}
 		.mobile {
 			display: none;
 		}
 		nav.desktop ul { list-style-type: none;}
 		nav.desktop li{
-			padding: 0 30px;
+			padding: 10px 40px;
 			display: inline-block;
 			text-transform: uppercase;
 			font-size: 15px;
 		}
+		.logo img {width: 200px; padding: 0;}
 		nav.desktop a{color: #434d53; text-decoration: none;}
+		.banner-principal{padding: 100px 0;}
+		form {text-align: center;}
+
+		.ocultar {display: none;}
+
+
+		footer{background-color: #ffab07; 
+			position: absolute;
+			width: 100%;
+			bottom: 0;
+			text-align: center;
+
+			line-height: 50px;
+		}
 	</style>
 </head>
 <body>
 
 	<header>
 		<div class="center">
-			<div class="logo left"><a href="/">MINHA LOGO</a></div><!--logo-->
+			<div class="logo left"><a href="index.html"><img src="_images/logo_teste.png" alt=""></a></div><!--logo-->
 			<nav class="desktop right">
 				<ul>
 					<li><a href="">Home</a></li>
@@ -76,7 +92,7 @@
 		</div>
 	</section>
 
-	<section class="descricao-autor">
+	<section class="descricao-autor ocultar">
 		<div class="center">
 			<div class="w50">
 				<h2>Adriano Martiliano</h2>
@@ -90,12 +106,12 @@
 		</div>	
 	</section>
 
-	<section class="especialidades">
+	<section class="especialidades ocultar">
 		
 		<div class="center">
 			<h2 class="title">Especialidades</h2>
 			<div class="w33 left box-especialidade">
-				<h3>Icone 1</h3>
+				<h3><i class="fa-brands fa-css3"></i></h3>
 				<h4>CSS3</h4>
 				<p>Texto CSS</p>
 			</div><!--box-especialidade-->
@@ -107,14 +123,14 @@
 			</div><!--box-especialidade-->
 
 			<div class="w33 left box-especialidade">
-				<h3>Icone 3</h3>
+				<h3><i class="fa-brands fa-js"></i></h3>
 				<h4>Javascript</h4>
 				<p>Texto JavaScript</p>
 			</div><!--box-especialidade-->
 		</div>
 	</section>
 
-	<section class="extras">
+	<section class="extras ocultar">
 		<div class="center">
 			<div class="w50 depoimentos-container">
 				<h2 class="title">Depoimentos dos nossos clientes</h2>
