Estilização do Form

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Portfólio</title>
-	<link rel="stylesheet" href="_css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="palavras-chave,do,meu,site">
 	<meta name="description" content="Descrição do meu website">
@@ -14,7 +14,7 @@
 
 	<header>
 		<div class="center">
-			<div class="logo left"><a href="index.html"><img src="_images/logo_teste.png" alt=""></a></div><!--logo-->
+			<div class="logo left"><a href="index.html"><img src="images/logo_teste.png" alt=""></a></div><!--logo-->
 			<nav class="desktop right">
 				<ul>
 					<li><a href="">Home</a></li>
@@ -36,6 +36,7 @@
 	</header>
 
 	<section class="banner-principal">
+		<div class="opacidade"></div><!--Div usada para criar um efeito na imagem-->
 		<div class="center">
 			<form>
 				<h2>Qual seu e-mail?</h2>
@@ -54,7 +55,7 @@
 				</p>
 			</div>
 			<div class="w50">
-				<img src="_images/foto.jpg">
+				<img src="images/foto.jpg">
 			</div>
 		</div>	
 	</section>
