--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 			<div class="logo left"><a href="index.html"><img src="images/logo_teste.png" alt=""></a></div><!--logo-->
 			<nav class="desktop right">
 				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="depoimentos">Depoimentos</a></li>
-					<li><a href="servicos">Serviços</a></li>
-					<li><a href="contato">Contato</a></li>
+					<a href=""><li>Home</li></a>
+					<a href="depoimentos"><li>Depoimentos</li></a>
+					<a href="servicos"><li>Serviços</li></a>
+					<a href="contato"><li>Contato</li></a>
 				</ul>
 			</nav>
 			 <nav class="mobile right">
 				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">Depoimentos</a></li>
-					<li><a href="">Serviços</a></li>
-					<li><a href="contato">Contato</a></li>
+					<a href=""><li>Home</li></a>
+					<a href="depoimentos"><li>Depoimentos</li></a>
+					<a href="servicos"><li>Serviços</li></a>
+					<a href="contato"><li>Contato</li></a>
 				</ul>
 			</nav>
 			<div class="clear"></div>
